--- a/index.html
+++ b/index.html
@@ -1,1 +1,68 @@
-<!-- Holiii -->
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>NEWS </title>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="description" content="Website Culinary Lab Proyect">
+	<meta name="author" content="Karina Palacios">
+	<link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:300,400,700,800" rel="stylesheet">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+	<link rel="stylesheet" type="text/css" href="assets/css/main.css">
+</head>
+<body>
+<section class="logo-section">
+	<div class="container">
+		<div class="row">
+			<div class="col-lg-12 col-xs-12 text-left">
+				<h1>
+					NEWS<span style="color:red">.</span>
+				</h1>
+			</div>
+		</div>
+	</div>	
+</section>	
+<section class="first-section">
+	<nav class="navbar navbar-default" id="header">
+		<div class="container-fluid">
+		    <!-- Brand and toggle get grouped for better mobile display -->
+		    <div class="navbar-header" id="nav-icon3">
+			      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+			            <span class="sr-only">Toggle navigation</span>
+				        <span class="icon-bar"></span>
+				        <span class="icon-bar"></span>
+				        <span class="icon-bar"></span>
+			      </button>
+		    </div>
+
+		    <!-- Collect the nav links, forms, and other content for toggling -->
+		    <div class="collapse navbar-collapse hola" id="bs-example-navbar-collapse-1">
+			      <ul class="nav navbar-nav navbar-left">
+				        <li><a href="#index">WORLD.</a></li>
+				        <li><a href="#servicios">BUSINESS.</a></li>
+				        <li><a href="#presi">POLITICS.</a></li>
+				        <li><a href="#proyectos">SPORTS.</a></li>
+				        <li><a href="#mennu">HEALTH.</a></li>
+				        <li><a href="#mennu">SCIENCES.</a></li>
+				        <li><a href="#mennu">SPOTLIGHT.</a></li>
+			      </ul>
+					<button id='search-button' class='btn btn-default '><span class='glyphicon glyphicon-search'></span></button>
+        <!-- Create your entire search form -->
+        <div id="search-form" class="form-group">
+          <div class="input-group">
+            <span id="search-icon" class="input-group-addon"><span class="glyphicon glyphicon-search"></span></span>
+            <input type="text" class="form-control" placeholder="Search">
+          </div>
+        </div>
+        </div>
+		    </div><!-- /.navbar-collapse -->
+		</div><!-- /.container-fluid -->
+	</nav>
+</section>
+<script type="text/javascript" src="assets/js/main.js"></script>
+</body>
+</html>
