--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <section class="logo-section">
 	<div class="container">
 		<div class="row">
-			<div class="col-lg-12 col-xs-12 text-left">
+			<div class="col-lg-12 col-sm-6 col-xs-6 text-left">
 				<h1>
 					NEWS<span style="color:red">.</span>
 				</h1>
@@ -50,6 +50,7 @@
 				        <li><a href="#mennu">SCIENCES.</a></li>
 				        <li><a href="#mennu">SPOTLIGHT.</a></li>
 			      </ul>
+			      </div>
 					<button id='search-button' class='btn btn-default '><span class='glyphicon glyphicon-search'></span></button>
         <!-- Create your entire search form -->
         <div id="search-form" class="form-group">
@@ -57,11 +58,69 @@
             <span id="search-icon" class="input-group-addon"><span class="glyphicon glyphicon-search"></span></span>
             <input type="text" class="form-control" placeholder="Search">
           </div>
-        </div>
-        </div>
 		    </div><!-- /.navbar-collapse -->
 		</div><!-- /.container-fluid -->
 	</nav>
+	<header>
+	<div class="container">
+		<div class="row">
+			<div class="col-xs-12 col-sm-7">
+				<a href="#">
+					<div class="big">
+						<img class="img-responsive" src="assets/img/1.png" alt="">
+					</div>
+				</a>
+			</div>
+			<div class="hidden-xs col-sm-5">
+				<div class="row">
+					<div class="col-xs-12">
+						<a href="#">
+							<div class="pop">
+								<img class="img-responsive" src="assets/img/6.png" alt="">
+							</div>
+						</a>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-xs-6">
+						<a href="#">
+							<div class="box">
+								<img class="img-responsive" src="assets/img/10.png" alt="">
+							</div>
+						</a>
+					</div>
+					<div class="col-xs-6">
+						<a href="#">
+							<div class="box">
+								<img class="img-responsive" src="assets/img/12.png" alt="">
+							</div>
+						</a>
+					</div>
+				</div>
+					
+			</div>
+		</div>
+	</div>
+</header>
+<section id="info">
+	<div class="container">
+		<div class="row">
+			<div class="col-xs-12 col-sm-8">
+				<div class="row">
+					<div class="col-xs-12 col-sm-6">
+					</div>
+					<div class="col-xs-12 col-sm-6">
+					</div>
+				</div>
+			</div>
+			<div class="col-xs-12 col-sm-4">
+			</div>
+		</div>
+	</div>
+</section>
+
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+	<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </section>
 <script type="text/javascript" src="assets/js/main.js"></script>
 </body>
