--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
 			<div class="col-xs-12 col-sm-7">
 				<a href="#">
 					<div class="big">
+					<span class="popular">POPULAR.</span>
 						<img class="img-responsive" src="assets/img/1.png" alt="">
 					</div>
 				</a>
@@ -76,6 +77,7 @@
 					<div class="col-xs-12">
 						<a href="#">
 							<div class="pop">
+							<span class="popular">POPULAR.</span>
 								<img class="img-responsive" src="assets/img/6.png" alt="">
 							</div>
 						</a>
