--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<div class="row">
 			<div class="col-lg-12 col-sm-6 col-xs-6 text-left">
 				<h1>
-					NEWS<span style="color:red">.</span>
+					NEWS<span style="color: #ea4748">.</span>
 				</h1>
 			</div>
 		</div>
@@ -38,30 +38,31 @@
 				        <span class="icon-bar"></span>
 			      </button>
 		    </div>
-
 		    <!-- Collect the nav links, forms, and other content for toggling -->
-		    <div class="collapse navbar-collapse hola" id="bs-example-navbar-collapse-1">
-			      <ul class="nav navbar-nav navbar-left">
-				        <li><a href="#index">WORLD.</a></li>
-				        <li><a href="#servicios">BUSINESS.</a></li>
-				        <li><a href="#presi">POLITICS.</a></li>
-				        <li><a href="#proyectos">SPORTS.</a></li>
-				        <li><a href="#mennu">HEALTH.</a></li>
-				        <li><a href="#mennu">SCIENCES.</a></li>
-				        <li><a href="#mennu">SPOTLIGHT.</a></li>
-			      </ul>
-			      </div>
-					<button id='search-button' class='btn btn-default '><span class='glyphicon glyphicon-search'></span></button>
-        <!-- Create your entire search form -->
-        <div id="search-form" class="form-group">
-          <div class="input-group">
-            <span id="search-icon" class="input-group-addon"><span class="glyphicon glyphicon-search"></span></span>
-            <input type="text" class="form-control" placeholder="Search">
-          </div>
-		    </div><!-- /.navbar-collapse -->
+			    <div class="collapse navbar-collapse hola" id="bs-example-navbar-collapse-1">
+				      <ul class="nav navbar-nav navbar-left">
+					        <li><a href="#index">WORLD.</a></li>
+					        <li><a href="#servicios">BUSINESS.</a></li>
+					        <li><a href="#presi">POLITICS.</a></li>
+					        <li><a href="#proyectos">SPORTS.</a></li>
+					        <li><a href="#mennu">HEALTH.</a></li>
+					        <li><a href="#mennu">SCIENCES.</a></li>
+					        <li><a href="#mennu">SPOTLIGHT.</a></li>
+				      </ul>
+				 </div>
+						<button id='search-button' class='btn btn-default'>
+							<span class='glyphicon glyphicon-search'></span>
+						</button>
+	        <!-- Create your entire search form -->
+	        <div id="search-form" class="form-group">
+	          <div class="input-group">
+	            <span id="search-icon" class="input-group-addon"><span class="glyphicon glyphicon-search"></span></span>
+	            <input type="text" class="form-control" placeholder="Search">
+	          </div>
+			 </div><!-- /.navbar-collapse -->
 		</div><!-- /.container-fluid -->
 	</nav>
-	<header>
+<header>
 	<div class="container">
 		<div class="row">
 			<div class="col-xs-12 col-sm-7">
@@ -98,31 +99,170 @@
 							</div>
 						</a>
 					</div>
-				</div>
-					
+				</div>	
 			</div>
 		</div>
 	</div>
 </header>
-<section id="info">
+<section class="second-section">
 	<div class="container">
 		<div class="row">
-			<div class="col-xs-12 col-sm-8">
+		 <!-- POPULAR NEWS -->
+		 <div class="col-md-4 col-lg-4 popular-new">
 				<div class="row">
-					<div class="col-xs-12 col-sm-6">
+					<div class="col-md-12 col-lg-12">
+						<h2>POPULAR NEWS.</h2>
+						<div class="linea"></div>
 					</div>
-					<div class="col-xs-12 col-sm-6">
+				</div>
+				<div class="row new-info">
+					<div class="col-md-6 col-lg-6">
+						<img src="assets/img/13.png" alt="placeholder+image" class="img-responsive">
+					</div>
+					<div class="col-md-6 col-lg-6">
+						<h4>26 May 2013</h4>
+						<p>Blandit Rutrum, Erat el Sagittis.</p>
+						<div class="star">
+							<i class="fa fa-star" aria-hidden="true"></i>
+							<i class="fa fa-star" aria-hidden="true"></i>
+							<i class="fa fa-star" aria-hidden="true"></i>
+							<i class="fa fa-star" aria-hidden="true"></i>
+							<i class="fa fa-star-o" aria-hidden="true"></i>
+						</div>
+					</div>
+				</div>
+				<div class="row new-info">
+					<div class="col-md-6 col-lg-6">
+						<img src="assets/img/11.png" alt="placeholder+image" class="img-responsive">
+					</div>
+					<div class="col-md-6 col-lg-6" >
+						<h4>26 May 2013</h4>
+						<p>Blandit Rutrum, Erat el Sagittis.</p>
+						<div class="star">
+							<i class="fa fa-star" aria-hidden="true"></i>
+							<i class="fa fa-star" aria-hidden="true"></i>
+							<i class="fa fa-star-o" aria-hidden="true"></i>
+							<i class="fa fa-star-o" aria-hidden="true"></i>
+							<i class="fa fa-star-o" aria-hidden="true"></i>
+						</div>
+					</div>
+				</div>
+				<div class="row new-info">
+					<div class="col-md-6 col-lg-6">
+						<img src="assets/img/7.png" alt="placeholder+image" class="img-responsive">
+					</div>
+					<div class="col-md-6 col-lg-6">
+						<h4>26 May 2013</h4>
+						<p>Blandit Rutrum, Erat el Sagittis.</p>
+						<div class="star">
+							<i class="fa fa-star" aria-hidden="true"></i>
+							<i class="fa fa-star" aria-hidden="true"></i>
+							<i class="fa fa-star" aria-hidden="true"></i>
+							<i class="fa fa-star-o" aria-hidden="true"></i>
+							<i class="fa fa-star-o" aria-hidden="true"></i>
+						</div>
+					</div>
+				</div>
+				<div class="row new-info">
+					<div class="col-md-6 col-lg-6">
+						<img src="assets/img/family_dos_web.png" alt="placeholder+image" class="img-responsive">
+					</div>
+					<div class="col-md-6 col-lg-6">
+						<h4>26 May 2013</h4>
+						<p>Blandit Rutrum, Erat el Sagittis.</p>
+						<div class="star">
+							<i class="fa fa-star" aria-hidden="true"></i>
+							<i class="fa fa-star" aria-hidden="true"></i>
+							<i class="fa fa-star" aria-hidden="true"></i>
+							<i class="fa fa-star" aria-hidden="true"></i>
+							<i class="fa fa-star" aria-hidden="true"></i>
+						</div>
+					</div>
+				</div>
+
+			</div>
+			<!-- HOT NEWS -->
+			<div class="col-md-4 col-lg-4 hot-new">
+				<div class="row">
+					<div class="col-md-12 col-lg-12">
+						<h2>HOT NEWS.</h2>
+						<div class="linea"></div>
+					</div>
+				</div>
+				<div class="row new-info">
+					<div class="col-md-6 col-lg-6">
+						<img src="assets/img/16.png" alt="placeholder+image" class="img-responsive">
+					</div>
+					<div class="col-md-6 col-lg-6">
+						<h4>26 May 2013</h4>
+						<p>Blandit Rutrum, Erat el Sagittis.</p>
+						<div class="star">
+							<i class="fa fa-star" aria-hidden="true"></i>
+							<i class="fa fa-star" aria-hidden="true"></i>
+							<i class="fa fa-star-o" aria-hidden="true"></i>
+							<i class="fa fa-star-o" aria-hidden="true"></i>
+							<i class="fa fa-star-o" aria-hidden="true"></i>
+						</div>
+					</div>
+				</div>
+				<div class="row new-info">
+					<div class="col-md-6 col-lg-6">
+						<img src="assets/img/15.png" alt="placeholder+image" class="img-responsive">
+					</div>
+					<div class="col-md-6 col-lg-6">
+						<h4>26 May 2013</h4>
+						<p>Blandit Rutrum, Erat el Sagittis.</p>
+						<div class="star">
+							<i class="fa fa-star" aria-hidden="true"></i>
+							<i class="fa fa-star" aria-hidden="true"></i>
+							<i class="fa fa-star" aria-hidden="true"></i>
+							<i class="fa fa-star" aria-hidden="true"></i>
+							<i class="fa fa-star" aria-hidden="true"></i>
+						</div>
+					</div>
+				</div>
+				<div class="row new-info">
+					<div class="col-md-6 col-lg-6">
+						<img src="assets/img/14.png" alt="placeholder+image" class="img-responsive">
+					</div>
+					<div class="col-md-6 col-lg-6">
+						<h4>26 May 2013</h4>
+						<p>Blandit Rutrum, Erat el Sagittis.</p>
+						<div class="star">
+							<i class="fa fa-star" aria-hidden="true"></i>
+							<i class="fa fa-star" aria-hidden="true"></i>
+							<i class="fa fa-star" aria-hidden="true"></i>
+							<i class="fa fa-star" aria-hidden="true"></i>
+							<i class="fa fa-star-o" aria-hidden="true"></i>
+						</div>
+					</div>
+				</div>
+				<div class="row new-info">
+					<div class="col-md-6 col-lg-6">
+						<img src="assets/img/9.png" alt="placeholder+image" class="img-responsive">
+					</div>
+					<div class="col-md-6 col-lg-6">
+						<h4>26 May 2013</h4>
+						<p>Blandit Rutrum, Erat el Sagittis.</p>
+						<div class="star">
+							<i class="fa fa-star" aria-hidden="true"></i>
+							<i class="fa fa-star" aria-hidden="true"></i>
+							<i class="fa fa-star" aria-hidden="true"></i>
+							<i class="fa fa-star-o" aria-hidden="true"></i>
+							<i class="fa fa-star-o" aria-hidden="true"></i>
+						</div>
 					</div>
 				</div>
 			</div>
-			<div class="col-xs-12 col-sm-4">
-			</div>
+			
 		</div>
 	</div>
+
 </section>
 
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-	<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<!-- /. Javascript -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </section>
 <script type="text/javascript" src="assets/js/main.js"></script>
 </body>
