--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 		 <div class="col-md-4 col-lg-4 popular-new">
 				<div class="row">
 					<div class="col-md-12 col-lg-12">
-						<h2>POPULAR NEWS.</h2>
+						<h4>POPULAR NEWS.</h4>
 						<div class="linea"></div>
 					</div>
 				</div>
@@ -120,7 +120,7 @@
 						<img src="assets/img/13.png" alt="placeholder+image" class="img-responsive">
 					</div>
 					<div class="col-md-6 col-lg-6">
-						<h4>26 May 2013</h4>
+						<h6>26 May 2013</h6>
 						<p>Blandit Rutrum, Erat el Sagittis.</p>
 						<div class="star">
 							<i class="fa fa-star" aria-hidden="true"></i>
@@ -131,12 +131,13 @@
 						</div>
 					</div>
 				</div>
+				<hr>
 				<div class="row new-info">
 					<div class="col-md-6 col-lg-6">
 						<img src="assets/img/11.png" alt="placeholder+image" class="img-responsive">
 					</div>
 					<div class="col-md-6 col-lg-6" >
-						<h4>26 May 2013</h4>
+						<h6>26 May 2013</h6>
 						<p>Blandit Rutrum, Erat el Sagittis.</p>
 						<div class="star">
 							<i class="fa fa-star" aria-hidden="true"></i>
@@ -147,12 +148,13 @@
 						</div>
 					</div>
 				</div>
+				<hr>
 				<div class="row new-info">
 					<div class="col-md-6 col-lg-6">
 						<img src="assets/img/7.png" alt="placeholder+image" class="img-responsive">
 					</div>
 					<div class="col-md-6 col-lg-6">
-						<h4>26 May 2013</h4>
+						<h6>26 May 2013</h6>
 						<p>Blandit Rutrum, Erat el Sagittis.</p>
 						<div class="star">
 							<i class="fa fa-star" aria-hidden="true"></i>
@@ -163,12 +165,13 @@
 						</div>
 					</div>
 				</div>
+				<hr>
 				<div class="row new-info">
 					<div class="col-md-6 col-lg-6">
 						<img src="assets/img/family_dos_web.png" alt="placeholder+image" class="img-responsive">
 					</div>
 					<div class="col-md-6 col-lg-6">
-						<h4>26 May 2013</h4>
+						<h6>26 May 2013</h6>
 						<p>Blandit Rutrum, Erat el Sagittis.</p>
 						<div class="star">
 							<i class="fa fa-star" aria-hidden="true"></i>
@@ -185,16 +188,17 @@
 			<div class="col-md-4 col-lg-4 hot-new">
 				<div class="row">
 					<div class="col-md-12 col-lg-12">
-						<h2>HOT NEWS.</h2>
+						<h4>HOT NEWS.</h4>
 						<div class="linea"></div>
 					</div>
 				</div>
+				
 				<div class="row new-info">
 					<div class="col-md-6 col-lg-6">
 						<img src="assets/img/16.png" alt="placeholder+image" class="img-responsive">
 					</div>
 					<div class="col-md-6 col-lg-6">
-						<h4>26 May 2013</h4>
+						<h6>26 May 2013</h6>
 						<p>Blandit Rutrum, Erat el Sagittis.</p>
 						<div class="star">
 							<i class="fa fa-star" aria-hidden="true"></i>
@@ -205,12 +209,13 @@
 						</div>
 					</div>
 				</div>
+				<hr>
 				<div class="row new-info">
 					<div class="col-md-6 col-lg-6">
 						<img src="assets/img/15.png" alt="placeholder+image" class="img-responsive">
 					</div>
 					<div class="col-md-6 col-lg-6">
-						<h4>26 May 2013</h4>
+						<h6>26 May 2013</h6>
 						<p>Blandit Rutrum, Erat el Sagittis.</p>
 						<div class="star">
 							<i class="fa fa-star" aria-hidden="true"></i>
@@ -221,12 +226,13 @@
 						</div>
 					</div>
 				</div>
+				<hr>
 				<div class="row new-info">
 					<div class="col-md-6 col-lg-6">
 						<img src="assets/img/14.png" alt="placeholder+image" class="img-responsive">
 					</div>
 					<div class="col-md-6 col-lg-6">
-						<h4>26 May 2013</h4>
+						<h6>26 May 2013</h6>
 						<p>Blandit Rutrum, Erat el Sagittis.</p>
 						<div class="star">
 							<i class="fa fa-star" aria-hidden="true"></i>
@@ -237,12 +243,13 @@
 						</div>
 					</div>
 				</div>
+				<hr>
 				<div class="row new-info">
 					<div class="col-md-6 col-lg-6">
 						<img src="assets/img/9.png" alt="placeholder+image" class="img-responsive">
 					</div>
 					<div class="col-md-6 col-lg-6">
-						<h4>26 May 2013</h4>
+						<h6>26 May 2013</h6>
 						<p>Blandit Rutrum, Erat el Sagittis.</p>
 						<div class="star">
 							<i class="fa fa-star" aria-hidden="true"></i>
@@ -253,10 +260,19 @@
 						</div>
 					</div>
 				</div>
-			</div>
-			
-		</div>
-	</div>
+				</div>
+		 <div class="col-md-4 col-lg-4 popular-new">
+				<div class="row">
+					<div class="col-md-12 col-lg-12">
+						<h4>STAY CONNECTED.</h4>
+						<div class="linea"></div>
+					</div>
+				</div>
+				<div class="row new-info">
+					<div class="col-md-6 col-lg-6">
+						<img src="assets/img/13.png" alt="placeholder+image" class="img-responsive">
+					</div>
+
 
 </section>
 
